--- a/robert_ardeleanu_portfolio/src/style.css
+++ b/robert_ardeleanu_portfolio/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #181818;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,3 +20,9 @@
   box-sizing: border-box;
   }
 
+body{
+  max-width: 1280px;
+  margin: 0 auto;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+}
