--- a/robert_ardeleanu_portfolio/src/styles/main.scss
+++ b/robert_ardeleanu_portfolio/src/styles/main.scss
@@ -30,14 +30,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   color: white;
-  }
+}
 
-body{
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+}
+
+body {
   max-width: 1280px;
   margin: 0 auto;
   border-left: 1px solid white;
@@ -46,7 +55,6 @@ body{
 
 //Nvigation Bar
 nav {
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -55,12 +63,12 @@ nav {
   padding-bottom: 8px;
 
   border-bottom: 1px solid white;
-  
+
   #logoImage {
     width: 35px;
     height: 35px;
     margin-left: 15px;
-  
+
     opacity: 100%;
   }
 
@@ -73,13 +81,13 @@ nav {
       margin-right: 20px;
     }
 
-    .navLink{
+    .navLink {
       text-decoration: none;
       color: white;
       opacity: 40%;
     }
-    
-    .navLink:hover{
+
+    .navLink:hover {
       opacity: 100%;
     }
 
@@ -90,143 +98,148 @@ nav {
 
     img {
       cursor: pointer;
-    
+
       margin-right: 20px;
       width: 25px;
       height: 25px;
 
-      &:hover{
+      &:hover {
         opacity: 100%;
       }
     }
 
     #activeMode {
       opacity: 100%;
-      filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
+      filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg)
+        brightness(100%) contrast(100%);
     }
-    
+
     #notactiveMode {
       opacity: 30%;
-      filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
+      filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg)
+        brightness(100%) contrast(100%);
     }
-    
+
     #notactiveMode:hover {
       opacity: 100%;
-      filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
+      filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg)
+        brightness(100%) contrast(100%);
     }
   }
 }
 
 //Footer
-footer{
+footer {
   margin-top: 80px;
-#footerWrapper {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 20px;
+  #footerWrapper {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
 
-  border-top: 1px solid white;
+    border-top: 1px solid white;
 
-  #logoImage{
-    margin-left: 15px;
+    #logoImage {
+      margin-left: 15px;
 
-    width: 35px;
-    height: 35px;
+      width: 35px;
+      height: 35px;
 
-    opacity: 100%;
-}
-
-img {
-  cursor: pointer;
-
-  color: white;
-  opacity: 30%;
-
-  width: 25px;
-  height: 25px;
-  margin-right: 15px;
-
-  &:hover{
-    opacity: 100%;
-  }
-}
-
-.footerExtra {
-  margin-right: 20px;
-
-  p{
-    font-size: 1.1rem;
-  }
-  
-  #activeMode {
-    opacity: 100%;
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
-  }
-  
-  #notactiveMode {
-    opacity: 30%;
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
-  }
-  
-  #notactiveMode:hover {
-    opacity: 100%;
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
-  }
-}
-
-.footerSocials, .footerContact {
-  display: flex;
-  flex-direction: column;
-
-  h4{
-    @include subtitles-font();
-    font-size: 1.2rem;
-  }
-
-  a{
-    text-decoration: none;
-    color: white;
-    opacity: 50%;
-    font-size: 1.1rem;
-
-    &:hover{
       opacity: 100%;
+    }
+
+    img {
+      cursor: pointer;
+
+      color: white;
+      opacity: 30%;
+
+      width: 25px;
+      height: 25px;
+      margin-right: 15px;
+
+      &:hover {
+        opacity: 100%;
+      }
+    }
+
+    .footerExtra {
+      margin-right: 20px;
+
+      p {
+        font-size: 1.1rem;
+      }
+
+      #activeMode {
+        opacity: 100%;
+        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg)
+          brightness(100%) contrast(100%);
+      }
+
+      #notactiveMode {
+        opacity: 30%;
+        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg)
+          brightness(100%) contrast(100%);
+      }
+
+      #notactiveMode:hover {
+        opacity: 100%;
+        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg)
+          brightness(100%) contrast(100%);
+      }
+    }
+
+    .footerSocials,
+    .footerContact {
+      display: flex;
+      flex-direction: column;
+
+      h4 {
+        @include subtitles-font();
+        font-size: 1.2rem;
+      }
+
+      a {
+        text-decoration: none;
+        color: white;
+        opacity: 50%;
+        font-size: 1.1rem;
+
+        &:hover {
+          opacity: 100%;
+        }
+      }
+    }
+
+    #tetrisEasteregg {
+      opacity: 100%;
+    }
+  }
+
+  #copyrightWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: white;
+    font-size: 16px;
+
+    margin-top: 20px;
+    padding-left: 10px;
+
+    img {
+      width: 25px;
+      height: 25px;
+      margin-right: 15px;
+    }
+
+    p {
+      color: black;
     }
   }
 }
 
-#tetrisEasteregg{
-  opacity: 100%;
-}
-}
-
-#copyrightWrapper{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  background-color: white;
-  font-size: 16px;
-
-  margin-top: 20px;
-  padding-left: 10px;
-
-  img{
-    width: 25px;
-    height: 25px;
-    margin-right: 15px;
-  }
-
-  p {
-    color: black;
-  }
-}
-
-}
-
 //Projects
-.projectNav{
-
+.projectNav {
   border: 1px solid white;
 
   display: flex;
@@ -234,7 +247,7 @@ img {
 
   padding: 10px 0;
 
-  li{
+  li {
     cursor: pointer;
 
     margin-right: 20px;
@@ -244,31 +257,31 @@ img {
     background-color: #1c1c1c;
 
     list-style: none;
-    text-align:  center;
-    color:  white;
+    text-align: center;
+    color: white;
 
-    &:hover{
+    &:hover {
       color: #181818;
       background-color: white;
       opacity: 80%;
     }
-}
-#listTitle {
-  border-radius: 0px;
-  background-color: rgba(0, 0, 0, 0);
+  }
+  #listTitle {
+    border-radius: 0px;
+    background-color: rgba(0, 0, 0, 0);
 
-  font-size: large;
-}
+    font-size: large;
+  }
 
-#activeFilter{
-  color: #181818;
-  background-color: white;
-  opacity: 80%;
-}
+  #activeFilter {
+    color: #181818;
+    background-color: white;
+    opacity: 80%;
+  }
 }
 
 //About
-.aboutGeneral{
+.aboutGeneral {
   display: flex;
   justify-content: space-between;
 
@@ -277,72 +290,71 @@ img {
 
   padding-top: 5vh;
 
-  .aboutTextWrapper{
+  .aboutTextWrapper {
     margin: auto 0;
-  
+
     display: flex;
     justify-content: space-around;
     flex-direction: column;
 
-    h2{
+    h2 {
       @include titles-font();
     }
-    
-    h5{
+
+    h5 {
       @include subtitles-font();
       font-size: 1.2rem;
       opacity: 50%;
       line-height: 0.5rem;
     }
 
-    p{
-    @include text-font();
+    p {
+      @include text-font();
     }
-    
-    span{
+
+    span {
       opacity: 40%;
     }
-    
-    a{
+
+    a {
       @include subtitles-font();
       font-size: 1.2rem;
       width: fit-content;
-    
+
       border: 1px solid lightgrey;
       border-radius: 15px;
-    
+
       padding: 15px 10px 10px 10px;
       margin-top: 20px;
-    
-      text-align:  center;
-      text-decoration: none;
-      color:  white;
 
-      &:hover{
+      text-align: center;
+      text-decoration: none;
+      color: white;
+
+      &:hover {
         background-color: white;
         color: black;
       }
     }
   }
-  
 }
-.aboutDetails{
+.aboutDetails {
   width: 70%;
   margin: 0 auto;
 
-  span{
+  span {
     color: white;
   }
 
-  .collapsibleWrapper{
+  .collapsibleWrapper {
     margin-top: 60px;
 
-    p{
+    p {
       @include text-font();
       padding-bottom: 20px;
     }
 
-    .collapspreview{
+    .collapspreview {
       display: flex;
       justify-content: space-between;
 
@@ -351,23 +363,23 @@ img {
       margin-bottom: 15px;
       cursor: pointer;
 
-      img{
+      img {
         opacity: 100%;
-        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
+        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg)
+          brightness(100%) contrast(100%);
         width: 25px;
         opacity: 70%;
         padding-bottom: 10px;
 
-        transition: transform 0.3s ease; 
+        transition: transform 0.3s ease;
 
-        &:hover{
+        &:hover {
           opacity: 100%;
         }
       }
 
-      h4{
+      h4 {
         @include subtitles-font();
-
       }
     }
   }
@@ -383,24 +395,23 @@ img {
   margin: 50px auto;
   padding-top: 20px;
 
-  a{
+  a {
     @include subtitles-font();
     font-size: 2rem;
-  
+
     border: 1px solid lightgrey;
     border-radius: 15px;
-  
+
     padding: 15px 180px 10px 180px;
     margin-bottom: 20px;
-  
-    text-align:  center;
+
+    text-align: center;
     text-decoration: none;
-    color:  white;
+    color: white;
   }
-  
-  a:hover{
+
+  a:hover {
     background-color: white;
-    color:#181818;
+    color: #181818;
   }
 }
-
