--- a/robert_ardeleanu_portfolio/src/styles/main.scss
+++ b/robert_ardeleanu_portfolio/src/styles/main.scss
@@ -49,8 +49,8 @@ canvas {
 body {
   max-width: 1280px;
   margin: 0 auto;
-  border-left: 1px solid white;
-  border-right: 1px solid white;
+  border-left: 1px solid #b3b3b3;
+  border-right: 1px solid #b3b3b3;
 }
 
 //Nvigation Bar
@@ -62,7 +62,7 @@ nav {
   padding-top: 8px;
   padding-bottom: 8px;
 
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #b3b3b3;
 
   #logoImage {
     width: 35px;
@@ -92,7 +92,7 @@ nav {
     }
 
     #lastNavLink {
-      border-right: 2px solid white;
+      border-right: 1px solid #b3b3b3;
       padding-right: 20px;
     }
 
@@ -136,7 +136,7 @@ footer {
     justify-content: space-between;
     padding-top: 20px;
 
-    border-top: 1px solid white;
+    border-top: 1px solid #b3b3b3;
 
     #logoImage {
       margin-left: 15px;
@@ -238,45 +238,126 @@ footer {
   }
 }
 
-//Projects
+//Project Navigations
 .projectNav {
-  border: 1px solid white;
+  border: 1px solid #b3b3b3;
 
   display: flex;
-  justify-content: left;
-
-  padding: 10px 0;
+  justify-content: space-around;
+  height: 40px;
 
   li {
     cursor: pointer;
-
-    margin-right: 20px;
-    padding: 5px 20px;
-
-    border-radius: 25px;
-    background-color: #1c1c1c;
 
     list-style: none;
     text-align: center;
     color: white;
 
-    &:hover {
-      color: #181818;
-      background-color: white;
-      opacity: 80%;
-    }
-  }
-  #listTitle {
-    border-radius: 0px;
-    background-color: rgba(0, 0, 0, 0);
+    flex: 1;
+    height: 40px;
 
-    font-size: large;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px solid #b3b3b3;
+
+    font-size: 1.1rem;
+
+    &:hover {
+      background-color: #181818;
+    }
   }
 
   #activeFilter {
     color: #181818;
     background-color: white;
-    opacity: 80%;
+    opacity: 100%;
+    border: 1px solid white;
+  }
+}
+
+//Projects Overview
+.projectListContainer {
+  .projectContainer {
+    display: flex;
+    justify-content: space-around;
+
+    margin-top: 80px;
+
+    width: 100%;
+
+    .projectRightSection {
+      img {
+        border-radius: 25px;
+      }
+    }
+    .projectLeftSection {
+      width: 30%;
+      h4 {
+        @include subtitles-font();
+        font-size: 1.1rem;
+        opacity: 50%;
+        line-height: 0.5rem;
+        padding-left: 5px;
+      }
+
+      h2 {
+        @include titles-font();
+        line-height: 98%;
+
+        margin-top: 15px;
+        margin-bottom: 20px;
+      }
+
+      .projectTags {
+        display: flex;
+        justify-content: left;
+        margin-bottom: 10px;
+
+        p {
+          @include text-font();
+
+          margin-right: 10px;
+          padding: 5px 10px;
+          background-color: #272727;
+          border-radius: 15px;
+        }
+      }
+
+      .projectInfo {
+        @include text-font();
+
+        background-color: #272727;
+        padding: 5px 10px;
+        border-radius: 15px;
+      }
+
+      .projectRoute {
+        text-decoration: none;
+        .projectLink {
+          @include subtitles-font();
+          font-size: 1.1rem;
+          width: fit-content;
+
+          border-radius: 15px;
+
+          padding: 10px 20px 5px 20px;
+          margin-top: 20px;
+
+          background-color: white;
+          text-align: center;
+          text-decoration: none;
+          color: #121212;
+
+          opacity: 60%;
+
+          &:hover {
+            opacity: 100%;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -318,17 +399,16 @@ footer {
 
     a {
       @include subtitles-font();
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       width: fit-content;
 
       border: 1px solid lightgrey;
       border-radius: 15px;
 
-      padding: 15px 10px 10px 10px;
+      padding: 10px 20px 5px 20px;
       margin-top: 20px;
 
       text-align: center;
-      text-decoration: none;
       color: white;
 
       &:hover {
