--- a/robert_ardeleanu_portfolio/src/styles/main.scss
+++ b/robert_ardeleanu_portfolio/src/styles/main.scss
@@ -1,3 +1,5 @@
+$bg-color-dark: #0f0f0f;
+
 @mixin titles-font {
   font-family: "Anek Devanagari", sans-serif;
   font-weight: 800;
@@ -37,20 +39,36 @@
   color: white;
 }
 
-canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1000;
-}
-
 body {
-  max-width: 1280px;
+  max-width: 1000px;
   margin: 0 auto;
   border-left: 1px solid #b3b3b3;
   border-right: 1px solid #b3b3b3;
+
+  background-color: $bg-color-dark;
+}
+
+.headerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+  overflow: hidden;
+
+  canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
+  img {
+    max-width: 100%;
+    z-index: 2;
+  }
 }
 
 //Nvigation Bar
@@ -59,10 +77,18 @@ nav {
   justify-content: space-between;
   align-items: center;
 
-  padding-top: 8px;
-  padding-bottom: 8px;
+  height: 50px;
+
+  padding-top: 0px;
+  padding-bottom: 0px;
 
   border-bottom: 1px solid #b3b3b3;
+
+  background: $bg-color-dark;
+
+  position: sticky;
+  top: 0;
+  z-index: 10;
 
   #logoImage {
     width: 35px;
@@ -85,6 +111,8 @@ nav {
       text-decoration: none;
       color: white;
       opacity: 40%;
+
+      margin-top: 5px;
     }
 
     .navLink:hover {
@@ -96,10 +124,11 @@ nav {
       padding-right: 20px;
     }
 
-    img {
+    .modeSwitch {
       cursor: pointer;
 
       margin-right: 20px;
+      margin-top: 3px;
       width: 25px;
       height: 25px;
 
@@ -166,7 +195,19 @@ footer {
       margin-right: 20px;
 
       p {
-        font-size: 1.1rem;
+        @include text-font();
+        font-size: 1rem;
+      }
+
+      .nyanUnlock {
+        font-size: 0.9rem;
+        cursor: pointer;
+
+        opacity: 60%;
+
+        &:hover {
+          opacity: 100%;
+        }
       }
 
       #activeMode {
@@ -244,7 +285,12 @@ footer {
 
   display: flex;
   justify-content: space-around;
-  height: 40px;
+
+  position: sticky;
+  bottom: 0px;
+  z-index: 9;
+
+  background-color: $bg-color-dark;
 
   li {
     cursor: pointer;
@@ -254,7 +300,7 @@ footer {
     color: white;
 
     flex: 1;
-    height: 40px;
+    padding: 1px 0;
 
     display: flex;
     align-items: center;
@@ -290,6 +336,7 @@ footer {
     .projectRightSection {
       img {
         border-radius: 25px;
+        width: 400px;
       }
     }
     .projectLeftSection {
@@ -304,6 +351,8 @@ footer {
 
       h2 {
         @include titles-font();
+        font-size: 2.5rem;
+
         line-height: 98%;
 
         margin-top: 15px;
@@ -317,6 +366,7 @@ footer {
 
         p {
           @include text-font();
+          font-size: 1rem;
 
           margin-right: 10px;
           padding: 5px 10px;
@@ -327,6 +377,7 @@ footer {
 
       .projectInfo {
         @include text-font();
+        font-size: 1rem;
 
         background-color: #272727;
         padding: 5px 10px;
@@ -380,17 +431,22 @@ footer {
 
     h2 {
       @include titles-font();
+      line-height: 98%;
+
+      margin-top: 15px;
+      font-size: 1.9rem;
     }
 
     h5 {
       @include subtitles-font();
-      font-size: 1.2rem;
+      font-size: 1rem;
       opacity: 50%;
       line-height: 0.5rem;
     }
 
     p {
       @include text-font();
+      font-size: 1.1rem;
     }
 
     span {
@@ -402,18 +458,20 @@ footer {
       font-size: 1.1rem;
       width: fit-content;
 
-      border: 1px solid lightgrey;
       border-radius: 15px;
 
       padding: 10px 20px 5px 20px;
       margin-top: 20px;
 
+      background-color: white;
       text-align: center;
-      color: white;
+      text-decoration: none;
+      color: #121212;
+
+      opacity: 60%;
 
       &:hover {
-        background-color: white;
-        color: black;
+        opacity: 100%;
       }
     }
   }
@@ -431,6 +489,7 @@ footer {
 
     p {
       @include text-font();
+      font-size: 1.1rem;
       padding-bottom: 20px;
     }
 
@@ -460,6 +519,7 @@ footer {
 
       h4 {
         @include subtitles-font();
+        font-size: 1.4rem;
       }
     }
   }
@@ -493,5 +553,41 @@ footer {
   a:hover {
     background-color: white;
     color: #181818;
+  }
+}
+
+.flyingCat {
+  overflow: hidden;
+  position: fixed;
+  top: 40%;
+  left: -300px;
+}
+
+.flyAnim {
+  animation: fly 3s linear; /* 5 seconds duration, linear timing, infinite repeats */
+}
+
+#nyan {
+  width: 35px;
+  height: 35px;
+
+  cursor: pointer;
+
+  margin-right: 20px;
+
+  opacity: 0%;
+  pointer-events: none;
+
+  &:hover {
+    opacity: 90%;
+  }
+}
+
+@keyframes fly {
+  0% {
+    left: -500px;
+  }
+  100% {
+    left: 105vw;
   }
 }
