--- a/robert_ardeleanu_portfolio/src/styles/main.scss
+++ b/robert_ardeleanu_portfolio/src/styles/main.scss
@@ -42,12 +42,13 @@ $bg-color-dark: #0f0f0f;
 body {
   max-width: 1000px;
   margin: 0 auto;
-  border-left: 1px solid #b3b3b3;
-  border-right: 1px solid #b3b3b3;
+  border-left: 1px solid #383838;
+  border-right: 1px solid #383838;
 
   background-color: $bg-color-dark;
 }
 
+//Hero
 .headerContainer {
   display: flex;
   justify-content: center;
@@ -55,6 +56,10 @@ body {
 
   position: relative;
   overflow: hidden;
+
+  @media (max-width: 506px) {
+    height: 200%;
+  }
 
   canvas {
     position: absolute;
@@ -68,6 +73,10 @@ body {
   img {
     max-width: 100%;
     z-index: 2;
+
+    @media (max-width: 506px) {
+      width: 200%;
+    }
   }
 }
 
@@ -82,7 +91,7 @@ nav {
   padding-top: 0px;
   padding-bottom: 0px;
 
-  border-bottom: 1px solid #b3b3b3;
+  border-bottom: 1px solid #383838;
 
   background: $bg-color-dark;
 
@@ -113,6 +122,10 @@ nav {
       opacity: 40%;
 
       margin-top: 5px;
+
+      @media (max-width: 506px) {
+        font-size: 0.9rem;
+      }
     }
 
     .navLink:hover {
@@ -122,6 +135,10 @@ nav {
     #lastNavLink {
       border-right: 1px solid #b3b3b3;
       padding-right: 20px;
+
+      @media (max-width: 506px) {
+        border: none;
+      }
     }
 
     .modeSwitch {
@@ -134,6 +151,10 @@ nav {
 
       &:hover {
         opacity: 100%;
+      }
+
+      @media (max-width: 506px) {
+        display: none;
       }
     }
 
@@ -160,12 +181,36 @@ nav {
 //Footer
 .footer {
   margin-top: 80px;
+  width: 100%;
+  border-top: 1px solid #383838;
+
+  .footerWrapper > *:nth-child(1) {
+    grid-area: a;
+  }
+  .footerWrapper > *:nth-child(2) {
+    grid-area: b;
+  }
+  .footerWrapper > *:nth-child(3) {
+    grid-area: c;
+  }
+
   .footerWrapper {
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
 
-    border-top: 1px solid #b3b3b3;
+    width: 95%;
+
+    margin: 0 auto;
+
+    @media (max-width: 590px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas:
+        "a b"
+        "c c";
+      gap: 10px;
+    }
 
     #logoImage {
       margin-left: 15px;
@@ -174,6 +219,10 @@ nav {
       height: 35px;
 
       opacity: 100%;
+
+      @media (max-width: 645px) {
+        display: none;
+      }
     }
 
     img {
@@ -194,9 +243,20 @@ nav {
     .footerExtra {
       margin-right: 20px;
 
+      .modeSwitchContainer {
+        @media (max-width: 590px) {
+          display: flex;
+          justify-content: center;
+        }
+      }
+
       p {
         @include text-font();
         font-size: 1rem;
+
+        @media (max-width: 645px) {
+          display: none;
+        }
       }
 
       .nyanUnlock {
@@ -207,6 +267,18 @@ nav {
 
         &:hover {
           opacity: 100%;
+        }
+      }
+
+      .modeSwitchContainer {
+        @media (max-width: 590px) {
+          display: flex;
+          justify-content: space-between;
+          width: 50%;
+
+          margin: 0 auto;
+          padding-left: 40px;
+          padding-top: 20px;
         }
       }
 
@@ -234,6 +306,15 @@ nav {
       display: flex;
       flex-direction: column;
 
+      @media (max-width: 645px) {
+        padding-left: 20px;
+      }
+
+      @media (max-width: 590px) {
+        margin: 0 auto;
+        padding-left: 0px;
+      }
+
       h4 {
         @include subtitles-font();
         font-size: 1.2rem;
@@ -245,6 +326,10 @@ nav {
         opacity: 50%;
         font-size: 1.1rem;
 
+        @media (max-width: 590px) {
+          text-align: center;
+        }
+
         &:hover {
           opacity: 100%;
         }
@@ -253,15 +338,18 @@ nav {
 
     #tetrisEasteregg {
       opacity: 100%;
+
+      @media (max-width: 1000px) {
+        display: none;
+      }
     }
   }
 
   #copyrightWrapper {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
 
-    background-color: white;
+    background-color: rgb(237, 237, 237);
     font-size: 16px;
 
     margin-top: 20px;
@@ -275,13 +363,17 @@ nav {
 
     p {
       color: black;
+
+      @media (max-width: 778px) {
+        font-size: 0.8rem;
+      }
     }
   }
 }
 
 //Project Navigations
 .projectNav {
-  border: 1px solid #b3b3b3;
+  border: 0.5px solid #383838;
 
   display: flex;
   justify-content: space-around;
@@ -306,9 +398,17 @@ nav {
     align-items: center;
     justify-content: center;
 
-    border: 1px solid #b3b3b3;
+    border: 1px solid #383838;
 
     font-size: 1.1rem;
+
+    @media (max-width: 450px) {
+      font-size: 1rem;
+    }
+
+    @media (max-width: 450px) {
+      font-size: 0.85rem;
+    }
 
     &:hover {
       background-color: #181818;
@@ -336,23 +436,52 @@ nav {
 
     width: 90%;
 
+    @media (max-width: 778px) {
+      flex-direction: column;
+    }
+
     .projectRightSection {
-      display: flex;
-      justify-content: right;
-      img {
-        border-radius: 25px;
-        max-width: 75%;
-        height: auto;
+      .projectRouteIMG {
+        display: flex;
+        justify-content: right;
+        @media (max-width: 778px) {
+          justify-content: center;
+        }
+        img {
+          border-radius: 25px;
+          max-width: 75%;
+
+          @media (max-width: 450px) {
+            max-width: 100%;
+            margin: 0 auto;
+          }
+        }
       }
     }
     .projectLeftSection {
+      display: flex;
+      flex-direction: column;
       width: 35%;
+
+      @media (max-width: 778px) {
+        width: 60%;
+        margin: 0 auto;
+      }
+
+      @media (max-width: 420px) {
+        width: 90%;
+      }
       h4 {
         @include subtitles-font();
         font-size: 1.1rem;
         opacity: 50%;
         line-height: 0.5rem;
         padding-left: 5px;
+
+        @media (max-width: 778px) {
+          text-align: center;
+          padding-left: 0;
+        }
       }
 
       h2 {
@@ -363,6 +492,11 @@ nav {
 
         margin-top: 15px;
         margin-bottom: 20px;
+
+        @media (max-width: 778px) {
+          text-align: center;
+          font-size: 2rem;
+        }
       }
 
       .projectTags {
@@ -370,13 +504,17 @@ nav {
         justify-content: left;
         margin-bottom: 10px;
 
+        @media (max-width: 778px) {
+          display: none;
+        }
+
         p {
           @include text-font();
           font-size: 0.9rem;
 
           margin-right: 10px;
           padding: 5px 10px;
-          background-color: #272727;
+          background-color: #0c0c0c;
           border-radius: 15px;
         }
       }
@@ -385,13 +523,20 @@ nav {
         @include text-font();
         font-size: 1rem;
 
-        background-color: #272727;
+        background-color: #0c0c0c;
         padding: 5px 10px;
         border-radius: 15px;
+
+        @media (max-width: 778px) {
+          display: none;
+        }
       }
 
       .projectRoute {
         text-decoration: none;
+        @media (max-width: 778px) {
+          display: none;
+        }
         .projectLink {
           @include subtitles-font();
           font-size: 1.1rem;
@@ -426,7 +571,16 @@ nav {
   width: 80%;
   margin: 0 auto;
 
-  padding-top: 5vh;
+  padding-top: 20px;
+
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
+
+  img {
+    width: 75%;
+    margin: 0 auto;
+  }
 
   .aboutTextWrapper {
     margin: auto 0;
@@ -434,6 +588,10 @@ nav {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+
+    @media (max-width: 800px) {
+      text-align: center;
+    }
 
     h2 {
       @include titles-font();
@@ -475,6 +633,10 @@ nav {
       color: #121212;
 
       opacity: 60%;
+
+      @media (max-width: 800px) {
+        margin: 20px auto;
+      }
 
       &:hover {
         opacity: 100%;
@@ -536,24 +698,31 @@ nav {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  align-items: center;
 
-  width: fit-content;
+  width: 80%;
   margin: 50px auto;
   padding-top: 20px;
 
   a {
     @include subtitles-font();
     font-size: 1.4rem;
+    width: 60%;
 
     border: 1px solid lightgrey;
     border-radius: 15px;
 
-    padding: 15px 180px 10px 180px;
+    padding-top: 6px;
+
     margin-bottom: 20px;
 
     text-align: center;
     text-decoration: none;
     color: white;
+
+    @media (max-width: 506px) {
+      width: 90%;
+    }
   }
 
   a:hover {
@@ -574,6 +743,7 @@ nav {
 
   .chickenHeader {
     margin-top: 50px;
+
     h1 {
       @include titles-font();
       line-height: 98%;
@@ -601,6 +771,14 @@ nav {
     justify-content: space-around;
     width: 60%;
 
+    @media (max-width: 720px) {
+      width: 90%;
+    }
+
+    @media (max-width: 450px) {
+      width: 100%;
+    }
+
     margin: 0 auto;
     button {
       background: none;
@@ -622,6 +800,14 @@ nav {
 
       opacity: 60%;
 
+      @media (max-width: 720px) {
+        font-size: 0.9rem;
+      }
+
+      @media (max-width: 450px) {
+        font-size: 0.85rem;
+      }
+
       &:hover {
         opacity: 100%;
       }
@@ -635,9 +821,23 @@ nav {
 
     margin-top: 25px;
 
+    @media (max-width: 800px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 550px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
     img {
       max-width: 100%;
       height: auto;
+      border-radius: 15px;
+      transition: opacity 0.2s ease-in;
+
+      @media (max-width: 550px) {
+        margin: 0 auto;
+      }
     }
   }
 }
